force-app/main/default/objects/AccountContactRelation/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>Account.Name + &apos; (&apos; +  Account.Integration_ID__c +&apos;) &apos;</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>