force-app/main/default/objects/AccountContactRelation/fields/AccountRecordType__c.field-meta.xml
<CustomField>
    <fullName>AccountRecordType__c</fullName>
    <formula>Account.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountRecordType</label>
    <type>Text</type>
</CustomField>