force-app/main/default/objects/AccountContactRelation/fields/GPMS_Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Verification_Status__c</fullName>
    <description>Used for determining if the user has completed verification</description>
    <label>GPMS Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Verified</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>