force-app/main/default/objects/AccountContactRelation/validationRules/Benchmarking_Organisation_role_checking.validationRule-meta.xml
<ValidationRule>
    <fullName>Benchmarking_Organisation_role_checking</fullName>
    <active>true</active>
    <errorConditionFormula>(AccountRecordType__c != &apos;Benchmarking_Organisation&apos;) &amp;&amp; INCLUDES( Roles, &apos;QI Benchmarker&apos;)</errorConditionFormula>
    <errorDisplayField>Roles</errorDisplayField>
    <errorMessage>QI Benchmarker Role should only be added against the Benchmarking Organisation Account</errorMessage>
</ValidationRule>