force-app/main/default/objects/AccountContactRelation/validationRules/Benchmarking_Organisation_role_checking2.validationRule-meta.xml
<ValidationRule>
    <fullName>Benchmarking_Organisation_role_checking2</fullName>
    <active>true</active>
    <errorConditionFormula>(AccountRecordType__c = &apos;Benchmarking_Organisation&apos;) &amp;&amp; (INCLUDES( Roles, &apos;Organisation Administrator&apos;) || INCLUDES( Roles, &apos;Star Rating Reviewer&apos;) || INCLUDES( Roles, &apos;Star Rating Reviewer - Service&apos;) || INCLUDES( Roles, &apos;Financial Reporting Data Entry&apos;) || INCLUDES( Roles, &apos;Financial Reporting Submission&apos;) || INCLUDES( Roles, &apos;QI Role - Org&apos;) || INCLUDES( Roles, &apos;QI Role - Service&apos;))</errorConditionFormula>
    <errorDisplayField>Roles</errorDisplayField>
    <errorMessage>All other Roles should not be added against the Benchmarking Organisation Account</errorMessage>
</ValidationRule>